Fix checkbox allignment issue on mobile devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,7 +85,7 @@ form {
   display: block;
   padding: 5px 0px;
   input {
-    width: 50%; 
+    width: 100%; 
   } 
   span {
     margin-top: -23px;
